--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
   <!-- gh_nimrod_doc_pages_api_list_start -->
 <ul>
 <li>master: <a href="docs/master/README.html">README</a>,
+<a href="docs/master/src/glossolalia.html">src/glossolalia</a>,
 <a href="docs/master/src/glossolalia_v1.html">src/glossolalia_v1</a>,
 <a href="docs/master/src/glossolalia_v2.html">src/glossolalia_v2</a>,
 <a href="docs/master/src/glossolalia_v3.html">src/glossolalia_v3</a>,
